Fix user list visibility on mobile when selecting scores
- Users with submitted scores are now visible on mobile devices
- Previously, all users except self were hidden until all scores were revealed
- Added has_score class to users who have submitted scores
- Modified CSS to show users who have submitted scores even when not all scores are revealed

--- a/src/components/UserList/userlist.module.css
+++ b/src/components/UserList/userlist.module.css
@@ -19,7 +19,7 @@
     display: block;
   }
 
-  .user_list:not(.show_scores) .user:not(.self) {
+  .user_list:not(.show_scores) .user:not(.self):not(.has_score) {
     display: none;
   }
 
